# streammate-studio-host

./: .gitignore  .gitmodules  CMakeLists.txt  OBS_PIN  README.md
.github/workflows/: macos-ci.yml
cmake/: obs-enable-swift.cmake
docs/: ci-notes.md
packaging/macos/: Info.plist  package-app.sh
scripts/: fork-guard.sh  verify-obs-pin.sh  write-sha256-manifest.sh
src/: native_overlay_renderer.cpp  native_overlay_renderer.h  studio_host.cpp  studio_host_smoke.cpp  user_plugin_portability.h
src/obs_module/: native_overlay_module_smoke.cpp  native_overlay_obs_module.cpp  streammate_test_crash_module.cpp  streammate_test_filter_module.cpp  streammate_test_hang_module.cpp  streammate_test_noop_module.cpp  streammate_test_source_module.cpp  user_plugin_module_smoke.cpp
tests/integration/: test_hello_capabilities.py  test_host_lifecycle.py  test_import_custody.py  test_import_hardening.py  test_import_parity.py  test_macos_ci_workflow.py  test_macos_packaging.py  test_native_overlay_module.py  test_plugin_crash_containment.py  test_plugin_discovery.py  test_plugin_slice_verbs.py  test_production_control_verbs.py  test_record_replay.py  test_upstream_pin_sets.py  test_user_plugin_loading.py
tests/unit/: native_overlay_golden.txt  test_native_overlay_renderer.cpp  test_user_plugin_portability.cpp
